Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-6042

Failed assert in Quick Designer

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt Creator 2.3.1
    • Qt Creator 2.3.1
    • Quick Designer
    • None
    • Windows Vista x64
    • f184ced2e1bbacc244392fe97230bfd9cc07099d

    Description

      1. Open samegame demo from Qt's sources ( demos\declarative\samegame\samegame.qmlproject ).
      2. Open Dialog.qml
      3. Go to Design mode
      4. Try to drag a Button from the Items bar.
        In some cases, Creator will fail an assert immediatly:
        Program qtcreator.exe
        Module 4.7.4
        File src\corelib\global\qglobal.cpp
        Line 2271
        Assert "model node is invalid"
        File src\plugins\qmldesigner\designercore\model\modelnode.cpp
        Line 739
      5. If Creator did not fail an assert yet, keep dragging the Button and press ESC:
        Program qtcreator.exe
        Module 4.7.4
        File src\corelib\global\qglobal.cpp
        Line 2271
        Assert "'false' in file"
        File src\plugins\qmldesigner\components\formeditor\abstractformeditortool.cpp
        Line 194

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thohartm Thomas Hartmann
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes