QmlDesigner.formEditor: use pure virtuel instead of assert

Asserting because of unexpected mouse events is evil.

Task-number: QTCREATORBUG-6042
Change-Id: Idc21b1cb6bfebead4eab80f6526235164b3f8d54
Reviewed-on: http://codereview.qt-project.org/5090
Reviewed-by: hjk <qthjk@ovi.com>