src/plugins/qmldesigner/components/formeditor/abstractformeditortool.h
@@ -66,8 +66,8 @@ public:
 
     virtual void dropEvent(QGraphicsSceneDragDropEvent * event);
     virtual void dragEnterEvent(QGraphicsSceneDragDropEvent * event);
-    virtual void dragLeaveEvent(QGraphicsSceneDragDropEvent * event);
-    virtual void dragMoveEvent(QGraphicsSceneDragDropEvent * event);
+    virtual void dragLeaveEvent(QGraphicsSceneDragDropEvent * event) = 0;
+    virtual void dragMoveEvent(QGraphicsSceneDragDropEvent * event) = 0;
 
     virtual void keyPressEvent(QKeyEvent *event) = 0;
     virtual void keyReleaseEvent(QKeyEvent *keyEvent) = 0;
